add intent fees to dbs, ports, application, interface
